src/common/components/navbar/Navbar.less
@import "../../common.less";

.navbar {
	border: 1px solid @border-color;
	border-radius: 4px;
	height: 56px;
	margin-bottom: 8px;
	display: flex;
	color: #fff;

	.navbar-item {
		width: 320px;
		display: flex;
		justify-content: center;
		align-items: center;

		&:hover {
			background: @background-color;
		}

		&.active {
			background: @background-color;
		}

		&:nth-child(2) {
			border-left: 1px solid @border-color;
		}

		&:last-child {
			border-left: 1px solid @border-color;
		}
	}
}

